fixed banner display on hm and log/reg

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,7 +1,7 @@
 <div ng-controller="HomeController as vm" class="bodyColor">
 
   <h5 style="text-align: center"> Home Page </h5>
-<div><img style='min-width:100%;height:400px;margin-top:-140px;margin-bottom:25px;' src="http://www.tisd.net/wp-content/themes/skeletonplus/Images/network-banner.jpg"></div>
+<div><img style='max-width:100%;height:400px;margin-top:-140px;margin-bottom:25px;' src="http://www.tisd.net/wp-content/themes/skeletonplus/Images/network-banner.jpg"></div>
 <!-- <div ng-controller="ProfilePostController as vm"> -->
 <div layout layout-align="center center" ng-show ='nav.status.name;'>
     <div flex="40" style="padding-bottom: 20px;">
