--- a/public/views/reglog.html
+++ b/public/views/reglog.html
@@ -1,5 +1,5 @@
 <div style="padding-top: 100px" ng-controller='GlobalController as nav' class="bodyColor">
-<div><img style='min-width:100%;height:400px;margin-top:-140px;margin-bottom:25px;' src="http://www.tisd.net/wp-content/themes/skeletonplus/Images/network-banner.jpg">
+<div><img style='max-width:100%;height:400px;margin-top:-140px;margin-bottom:25px;' src="http://www.tisd.net/wp-content/themes/skeletonplus/Images/network-banner.jpg">
 <p style="font-size:3em; margin-top: -325px; margin-bottom:170px;color:white;text-align:center">Learn. Work. Mentor.</p></div>
   <!-- Show the Login Form -->
   <div ng-show="nav.isLogin" style="padding:100px">
