upvote/downvote on profile posts

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -29,13 +29,13 @@
       <div class='md-list-item-text' style='padding:10px; padding-left:30px' >
         <h2 >  {{p.title}} </h2>
         <h4 ng-bind-html="p.body"></h4>
-        <div layout>
-          <md-button class="zmdi zmdi-thumb-down zmdi-hc-2x" ng-click="vm.downvote(p)" aria-label="down"> </md-button>
-          <md-button class="zmdi zmdi-thumb-up zmdi-hc-2x" ng-click="vm.upvote(p)" aria-label="up"> </md-button>
-          <md-button class="zmdi zmdi-plus-circle zmdi-hc-2x" ng-click="vm.followOnPost(p);" aria-label="follow"></md-button>
         <h5> By: {{p.createdBy.name | firstLetterFilter}} {{p.createdBy.lastName | firstLetterFilter}} on {{p.date | dateFilter}}</h5>
+        <div layout>
+          <md-button class="zmdi zmdi-thumb-down" ng-click="vm.downvote(p)" aria-label="down"> </md-button>
+          <md-button class="zmdi zmdi-thumb-up" ng-click="vm.upvote(p)" aria-label="up"> </md-button>
       </div>
-      <md-button class="md-raised" ng-click="p.reblog = !p.reblog">Reblog</md-button>
+      <md-button class="zmdi zmdi-plus-circle" ng-click="vm.followOnPost(p);" aria-label="follow"> Follow</md-button>
+      <md-button class="zmdi zmdi-redo" ng-click="p.reblog = !p.reblog">  Reblog</md-button>
         <div uib-collapse="!p.reblog">
           <div class="well well-lg">
             <form ng-submit="vm.reblog(p);">
