--- a/public/views/forumPost.html
+++ b/public/views/forumPost.html
@@ -6,9 +6,11 @@
 
 <h5>Author: {{vm.apost.createdBy.name | firstLetterFilter}} {{vm.apost.createdBy.lastName | firstLetterFilter }}</h5>
 
-<div layout>
-<md-button ui-sref="EditFPost({id: vm.apost._id})">Edit</md-button>
-<md-button ng-click="vm.deleteFPost(vm.apost)">Delete</md-button>
+<div layout="row">
+<md-button class="zmdi zmdi-thumb-down" ng-click="vm.downvote(vm.apost)" aria-label="down"> </md-button>
+<md-button class="zmdi zmdi-thumb-up" ng-click="vm.upvote(vm.apost)" aria-label="up"> </md-button>
+<md-button class="zmdi zmdi-edit" ui-sref="EditFPost({id: vm.apost._id})"> Edit</md-button>
+<md-button class="zmdi zmdi-delete" ng-click="vm.deleteFPost(vm.apost)"> Delete</md-button>
 </div>
 
 <div layout="column" layout-align="center">
