--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -38,11 +38,13 @@
 
 
             <!-- Update profile -->
-    <md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button>
+    <md-button class="zmdi zmdi-edit" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Edit Profile </md-button>
 
                     <!-- Follow -->
-    <md-button class="md-raised" ng-click="nav.followOnProfile();">Follow</md-button><br>
-    <md-button class="md-raised" ng-click="nav.unFollowProfile();">Un-Follow</md-button><br>
+    <md-button class="zmdi zmdi-plus-circle-o" ng-click="vm.followOnProfile(p);" aria-label="follow"> Follow</md-button>
+    <md-button class="zmdi zmdi-minus-circle-outline" ng-click="vm.unfollowOnProfile(p);" aria-label="unfollow"> Unfollow</md-button>
+    <!-- <md-button class="md-raised" ng-click="nav.followOnProfile();">Follow</md-button><br>
+    <md-button class="md-raised" ng-click="nav.unFollowProfile();">Un-Follow</md-button><br> -->
     <span style="padding-left:15px">Followers:</span> <a ui-sref="Followers({id: vm.profile._id})">{{vm.profile.followers.length}}</a><br>
     <span style="padding-left:15px">Following:</span> <a ui-sref="Following({id: vm.profile._id})">{{vm.profile.following.length}}</a>
 
