--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -21,9 +21,9 @@
     </md-input-container>
 
     <div style="padding-top:50px" layout>
-      <md-button type="submit" class="md-raised"> Send </md-button>
+      <md-button type="submit" class="md-flat"> Send </md-button>
       <!-- have a toast saying 'message sent' -->
-      <md-button type="button" class="md-raised" ui-sref="Home">Cancel</md-button>
+      <md-button type="button" class="md-flat" ui-sref="Home">Cancel</md-button>
       <!-- by clicking cancel can this go back to previous state? or home  -->
     </div>
   </form>
