--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -38,7 +38,7 @@
 
 
             <!-- Update profile -->
-    <md-button class="zmdi zmdi-edit" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Edit Profile </md-button>
+    <md-button class="zmdi zmdi-wrench" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Edit Profile </md-button>
 
 
                     <!-- Follow -->
@@ -64,7 +64,7 @@
           <textarea required ng-model="vm.post.body" columns="2"></textarea>
         </md-input-container>
 
-        <md-button type="submit" class="md-raised" > Post </md-button>
+        <md-button type="submit" class="zmdi zmdi-mail-send" > Post </md-button>
 </form>
 </div>
 </div>
