--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,7 +2,6 @@
 
   <h5 style="text-align: center"> Home Page </h5>
 <div><img style='max-width:100%;height:400px;margin-top:-140px;margin-bottom:25px;' src="http://www.tisd.net/wp-content/themes/skeletonplus/Images/network-banner.jpg"></div>
-<!-- <div ng-controller="ProfilePostController as vm"> -->
 <div layout layout-align="center center" ng-show ='nav.status.name;'>
     <div flex="40" style="padding-bottom: 20px;">
       <form ng-submit="vm.createPost();">
@@ -14,7 +13,7 @@
         <textarea ui-tinymce ng-model="vm.post.body"></textarea>
         <br>
         <br>
-        <md-button type="submit" class="md-raised" > Post </md-button>
+        <md-button type="submit" class="zmdi zmdi-mail-send" > Post </md-button>
 </form>
 </div>
 </div>
