--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=entypo">
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css'>
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css'>
+	<link rel="stylesheet" type="text/css" href="/css/speech-input.css">
 	<link rel="stylesheet" type="text/css" href="/css/site.css">
 </head>
 
@@ -96,6 +97,7 @@
 
 	<!-- Ext Libs -->
 	<script type="text/javascript" src="/tinymce-dist/tinymce.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 	<script src="angular/angular.min.js"></script>
 	<script type="text/javascript" src="/angular-ui-tinymce/src/tinymce.js"></script>
 	<script src="//js.pusher.com/3.0/pusher.min.js"></script>
@@ -111,6 +113,7 @@
 	<script src="/angular-bootstrap/ui-bootstrap.min.js"></script>
 	<!-- Global Src -->
 	<script src="/javascript/app.js"></script>
+	<script src="/javascript/speech-input.js"></script>
 	<!-- Factories -->
 	<script src="/javascript/services/HomeFactory.js"></script>
 	<script src="/javascript/services/UserFactory.js"></script>
