--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css'>
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css'>
 	<link rel="stylesheet" type="text/css" href="/css/speech-input.css">
+	<link rel="stylesheet" href="/angular-ui-notification/dist/angular-ui-notification.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/site.css">
 </head>
 
@@ -99,7 +100,7 @@
 
 
 	<script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script>
-
+<script src="/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
 	<!-- Ext Libs -->
 	<script type="text/javascript" src="/tinymce-dist/tinymce.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
