email setup and changed. bug fixes to delete pro posts

--- a/public/views/createforumPost.html
+++ b/public/views/createforumPost.html
@@ -6,8 +6,8 @@
           <input required ng-model="vm.fpost.title"></input>
         </md-input-container>
         <md-input-container >
-          <label> Content </label>
-          <textarea ng-model="vm.fpost.body"></textarea>
+          <!-- <label> Content </label> -->
+          <textarea ui-tinymce ng-model="vm.fpost.body"></textarea>
         </md-input-container>
         <md-input-container layout-padding>
             <label> Channel </label>
