--- a/views/index.html
+++ b/views/index.html
@@ -64,19 +64,19 @@
 
 	<footer class="footer-distributed" style=" background-color:#32B2B2;">
 
-		<div style="text-align:right;margin-bottom:-65px;margin-top:25px">
-			<p style="margin-bottom:-5px; margin-right:25px"> Follow Us </p><br>
+		<div style="text-align:right;margin-bottom:-75px;margin-top:35px">
+			<p style="margin-bottom:-5px; margin-right:25px;font-family: 'Quicksand', sans-serif;color:white"> Follow Us </p><br>
 			<!-- <a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
 			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-linkedin-box"></i></a>
 			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-twitter"></i></a>
 			<a class="list-group-item" href="https://github.com/devnetcc/Coder-Net" target="_blank"><i class="zmdi zmdi-github"></i></a> -->
 
 		<!--  -->
-		<div  style="text-align:right;pading:6px;">
-		<a href="#" target="_blank"><img height='25' width='25' src='http://i.stack.imgur.com/kNPKJ.gif'></a>
-		<a href="#" target="_blank"><img height='25' width='25' src='http://freeiconbox.com/icon/256/2766.png'></a>
-		<a  href="#" target="_blank"><img height='25' width='25' src="http://static1.squarespace.com/static/51685161e4b0e454d76e8167/55f0ab3ee4b029a70084f3dd/55f0ab48e4b015224f3a9637/1441836711570/twitter1.gif"></i></a>
-		<a  href="https://github.com/devnetcc/Coder-Net" target="_blank"><img height='25' width='25' src='http://cdn.mysitemyway.com/icons-watermarks/simple-black/social-media/social-media_github/social-media_github_simple-black_512x512.png'></a>
+		<div  style="text-align:right;padding:10px;">
+		<a href="#" target="_blank"><img style="margin-right:3px;" height='23' width='23' src='http://zizaza.com/cache/big_thumb/iconset/573933/573940/PNG/256/white_simple_social_icons_pack/facebook_facebook_icon_white_icon.png'></a>
+		<a style='border:white 3px solid;border-radius:50%;height:5px' href="#" target="_blank"><b><img height='18' width='18'style='padding-bottom:2px;' src='http://americashomes.com/wp-content/uploads/2014/08/linkedin-icon_white.png'></b></a>
+		<a  href="#" target="_blank"><img height='25' width='25' src="http://luckyday.co/wp-content/themes/luckydaytheme/img/twitter.png"></i></a>
+		<a  href="https://github.com/devnetcc/Coder-Net" target="_blank"><img height='22' width='22' src='http://www.brienpafford.com/img/social/git_white.png'></a>
 	</div>
 	</div>
 		<!--  -->
