--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -11,8 +11,12 @@
   <div>
         <!-- Profile Tagline -->
     <h1 style="margin-left:50px;">{{vm.profile.tagLine}}</h3>
-    <div style="height:225px;width:225px;  margin-left:50px;text-align:center;">
+    <div ng-show='vm.profile.pic.length'  style="height:225px;width:225px;  margin-left:50px;text-align:center;">
       <img style='max-width:100%; max-height:100%' src='{{vm.profile.pic}}'>
+    </div>
+       <!-- default photo -->
+    <div ng-show='!vm.profile.pic.length' style="height:225px;width:225px;  margin-left:50px;text-align:center;">
+      <img style='max-width:100%; max-height:100%' src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcS_wxp_qEFvoISSQK1duhZLXX-IO4jjyT-_nubJtY3WBryb_wbS'>
     </div>
 
     <!-- Personal Links -->
@@ -36,7 +40,7 @@
 
 
             <!-- Update profile -->
-    <md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button>
+    <!-- <md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button> -->
   <!-- send message -->
   <md-button class="md-raised" ui-sref="Message({id: vm.profile._id})">Message</md-button>
   <md-button class="md-raised" ui-sref="MessageCenter({id: vm.profile._id})">My Messages</md-button>
