--- a/views/index.html
+++ b/views/index.html
@@ -75,8 +75,8 @@
 
 		<!--  -->
 		<div  style="text-align:right;padding:10px;">
-		<a href="#" target="_blank"><img style="margin-right:3px;" height='23' width='23' src='http://zizaza.com/cache/big_thumb/iconset/573933/573940/PNG/256/white_simple_social_icons_pack/facebook_facebook_icon_white_icon.png'></a>
-		<a style='border:white 3px solid;border-radius:50%;height:5px' href="#" target="_blank"><b><img height='18' width='18'style='padding-bottom:2px;' src='http://americashomes.com/wp-content/uploads/2014/08/linkedin-icon_white.png'></b></a>
+		<a href="#" target="_blank"><img style="border:white 2px solid;border-radius:50%;margin-right:3px;" height='21' width='21' src='http://zizaza.com/cache/big_thumb/iconset/573933/573940/PNG/256/white_simple_social_icons_pack/facebook_facebook_icon_white_icon.png'></a>
+		<a style='border:white 2px solid;border-radius:50%;height:5px' href="#" target="_blank"><b><img height='18' width='18'style='padding-bottom:2px;' src='http://americashomes.com/wp-content/uploads/2014/08/linkedin-icon_white.png'></b></a>
 		<a  href="#" target="_blank"><img height='25' width='25' src="http://luckyday.co/wp-content/themes/luckydaytheme/img/twitter.png"></i></a>
 		<a  href="https://github.com/devnetcc/Coder-Net" target="_blank"><img height='22' width='22' src='http://www.brienpafford.com/img/social/git_white.png'></a>
 	</div>
