--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
 		<section layout flex layout-align="left">
 			<md-button class="zmdi zmdi-menu zmdi-hc-2x" ng-click="nav.toggleSidenav()" style="padding-top: 12px" aria-label="Toggle Menu">
 			</md-button>
-			<h1 class="logo" ui-sref="Home"> &#060;&nbsp;Coder Net&nbsp;&#062; </h1>
+			<h2 class="logo" ui-sref="Home"> &#060;&nbsp;Coder Net&nbsp;&#062; </h2>
 
 		</section>
 
@@ -66,22 +66,15 @@
 
 	<footer class="footer-distributed" style=" background-color:#32B2B2;">
 
-		<div style="text-align:right;margin-bottom:-75px;margin-top:35px">
-			<p style="margin-bottom:-5px; margin-right:25px;font-family: 'Quicksand', sans-serif;color:white"> Follow Us </p><br>
-			<!-- <a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
-			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-linkedin-box"></i></a>
-			<a class="list-group-item" href="#" target="_blank"><i class="zmdi zmdi-twitter"></i></a>
-			<a class="list-group-item" href="https://github.com/devnetcc/Coder-Net" target="_blank"><i class="zmdi zmdi-github"></i></a> -->
 
-		<!--  -->
-		<div  style="text-align:right;padding:10px;">
-		<a href="#" target="_blank"><img style="margin-right:3px;" height='23' width='23' src='http://zizaza.com/cache/big_thumb/iconset/573933/573940/PNG/256/white_simple_social_icons_pack/facebook_facebook_icon_white_icon.png'></a>
-		<a style='border:white 3px solid;border-radius:50%;height:5px' href="#" target="_blank"><b><img height='18' width='18'style='padding-bottom:2px;' src='http://americashomes.com/wp-content/uploads/2014/08/linkedin-icon_white.png'></b></a>
-		<a  href="#" target="_blank"><img height='25' width='25' src="http://luckyday.co/wp-content/themes/luckydaytheme/img/twitter.png"></i></a>
-		<a  href="https://github.com/devnetcc/Coder-Net" target="_blank"><img height='22' width='22' src='http://www.brienpafford.com/img/social/git_white.png'></a>
-	</div>
-	</div>
-		<!--  -->
+		<div class="footer-right">
+					<p> Follow Us </p>
+					<a href="#" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
+					<a href="#" target="_blank"><i class="zmdi zmdi-linkedin-box"></i></a>
+					<a href="#" target="_blank"><i class="zmdi zmdi-twitter-box"></i></a>
+					<a href="#" target="_blank"><i class="zmdi zmdi-github-box"></i></a>
+				</div>
+
 
 		<div class="footer-left">
 			<h3 class="logo"> &#060;&nbsp;Coder Net&nbsp;&#062; </h3>
