--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -23,7 +23,7 @@
   <div style="text-align:center;">
 
 
-    <div layout row  style="margin-left:60px;margin-top:20px;margin-bottom:-40px;">
+    <div layout row  style="margin-left:55px;margin-top:20px;">
     <div style='margin: 5px;' ng-show='vm.profile.profileFBlink'>
       <a target='_blank'class="list-group-item" href="{{vm.profile.profileFBlink}}" target="_blank"><i class="zmdi zmdi-facebook"  ></i></a></div>
 
@@ -42,7 +42,7 @@
             <!-- Update profile -->
     <!-- <md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button> -->
   <!-- send message -->
-  <md-button class="md-raised" ui-sref="Message({id: vm.profile._id})">Message</md-button>
+  <md-button style="margin-left:50px"class="md-raised" ui-sref="Message({id: vm.profile._id})">Message</md-button>
   <md-button class="md-raised" ui-sref="MessageCenter({id: vm.profile._id})">My Messages</md-button>
 
     <md-button class="zmdi zmdi-wrench" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Edit Profile </md-button>
@@ -50,7 +50,7 @@
 
                     <!-- Follow -->
     <md-button class="zmdi zmdi-plus-circle-o" ng-click="vm.followOnProfile(p);" aria-label="follow"> Follow</md-button>
-    <md-button class="zmdi zmdi-minus-circle-outline" ng-click="vm.unfollowOnProfile(p);" aria-label="unfollow"> Unfollow</md-button>
+    <md-button class="zmdi zmdi-minus-circle-outline" ng-click="vm.unfollowOnProfile(p);" aria-label="unfollow"> Unfollow</md-button><br>
     <!-- <md-button class="md-raised" ng-click="nav.followOnProfile();">Follow</md-button><br>
     <md-button class="md-raised" ng-click="nav.unFollowProfile();">Un-Follow</md-button><br> -->
     <span style="padding-left:15px">Followers:</span> <a ui-sref="Followers({id: vm.profile._id})">{{vm.profile.followers.length}}</a><br>
