--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -42,8 +42,8 @@
             <!-- Update profile -->
     <!-- <md-button class="md-raised" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Update Profile </md-button> -->
   <!-- send message -->
-  <md-button class="md-raised" ui-sref="Message({id: vm.profile._id})">Message</md-button>
-  <md-button class="md-raised" ui-sref="MessageCenter({id: vm.profile._id})">My Messages</md-button>
+  <md-button class="zmdi zmdi-email" ui-sref="Message({id: vm.profile._id})">Message</md-button>
+  <md-button class="zmdi zmdi-email" ui-sref="MessageCenter({id: vm.profile._id})">My Messages</md-button>
 
     <md-button class="zmdi zmdi-wrench" style='margin-left:50px;margin-top:35px;' ng-click = "vm.goToEdit(vm.profile._id, vm.profile)"> Edit Profile </md-button>
 
