--- a/public/views/message.html
+++ b/public/views/message.html
@@ -1,5 +1,10 @@
 <div ng-controller="ProfileController as vm">
   <form ng-submit="vm.sendMsg();">
+    To: {{vm.profile.name}}
+    <md-input-container>
+      <label>Add Additional Recipents</label>
+      <input ng-model="vm.person.contact"/>
+    </md-input-container>
     <md-input-container>
       <label>Message</label>
       <textarea ng-model="vm.person.inbox.message.body"></textarea>
