upvote downvote almost works

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -356,3 +356,35 @@ max-width: 310px;
 md-tabs.md-default-theme.md-primary, md-tabs.md-primary > md-tabs-wrapper {
 	background-color: #0d6666;
 }
+
+.chart {
+    background: #eee;
+    padding: 3px;
+
+}
+
+.chart div {
+  width: 0;
+  transition: all 1s ease-out;
+  -moz-transition: all 1s ease-out;
+  -webkit-transition: all 1s ease-out;
+}
+
+.chart div {
+  font: 10px sans-serif;
+  background-color: steelblue;
+  text-align: right;
+  padding: 3px;
+  margin: 5px;
+  color: white;
+  box-shadow: 2px 2px 2px #666;
+}
+
+.yeah {
+	display: inline;
+}
+
+.avatar {
+	width:50px;
+	height:50px;
+}
