--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,7 @@
 	<link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css'>
 	<link rel="stylesheet" type="text/css" href="/css/speech-input.css">
 	<link rel="stylesheet" href="/angular-ui-notification/dist/angular-ui-notification.min.css">
+	<!-- <link rel="stylesheet" href="/angular-chart.js/dist/angular-chart.css"> -->
 	<link rel="stylesheet" type="text/css" href="/css/site.css">
 </head>
 
@@ -61,7 +62,6 @@
 
 	</md-toolbar>
 
-
 	<ui-view></ui-view>
 
 	<footer class="footer-distributed" style=" background-color:#32B2B2;">
@@ -95,11 +95,14 @@
 	<script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script>
 	<!-- Ext Libs -->
 	<script type="text/javascript" src="/tinymce-dist/tinymce.js"></script>
+	<script src="//js.pusher.com/3.0/pusher.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 	<script src="angular/angular.min.js"></script>
+	<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.9/d3.js" charset="utf-8"></script>
+	<!-- <script src="/angular-chart.js/dist/angular-chart.js"></script> -->
 	<script src="/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
 	<script type="text/javascript" src="/angular-ui-tinymce/src/tinymce.js"></script>
-	<script src="//js.pusher.com/3.0/pusher.min.js"></script>
 	<script src="angular-socialshare/src/js/angular-socialshare.js"></script>
 	<script src="angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.js"></script>
@@ -128,6 +131,7 @@
 	<script src="/javascript/controllers/ProfileController.js"></script>
 	<script src="/javascript/filters/firstletterfilter.js"></script>
 	<script src="/javascript/filters/datefilter.js"></script>
+	<!-- <script src="/javascript/controllers/chartDirective.js"></script> -->
 
 
 </body>
