--- a/public/views/createforumPost.html
+++ b/public/views/createforumPost.html
@@ -18,6 +18,10 @@
               <md-option value="Code Questions"> Code Questions</md-option>
               <md-option value="Meetups"> Meetups </md-option>
               <md-option value="Bootcamp Reviews"> Bootcamp Reviews </md-option>
+              <md-option value="Tech News">Tech News</md-option>
+              <md-option value="Developer Tips">Developer Tips</md-option>
+              <md-option value="Useful Resouces">Useful Resources</md-option>
+
             </md-select>
           </md-input-container>
             <div layout style="padding-top:50px">
