--- a/public/views/forum.html
+++ b/public/views/forum.html
@@ -1,10 +1,8 @@
 <div ng-controller="ForumController as vm" class="bodyColor">
 
 
-<h1 style="text-align:center"> Forum Channels </h1>
-<div><img style='min-width:100%;margin-top:-140px;margin-bottom:25px;' src="http://www.cpd-india.com/images/slider-image/php-banner.jpg"></div>
 <div style="text-align:center">
-<md-container><md-button class="md-primary"ui-sref="CreateForumPost">Create a Forum Post</md-button></md-container>
+<md-button class="md-primary"ui-sref="CreateForumPost">Create a Forum Post</md-button>
 </div>
 
   <md-tabs class="md-primary">
