--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,8 @@
 <body ng-controller='GlobalController as nav' class="bodyColor">
 
 	<md-sidenav layout="column" class="md-sidenav-left bodyColor" md-component-id="left">
-		<md-toolbar class="md-medium-tall" style=" opacity:0.3; padding: 10px; background-color:#32B2B2;">
+		<md-toolbar style=" opacity:0.3; padding: 10px; background-color:#32B2B2; height:125px">
 			<div class="md-toolbar-tools">
-				<h2 class="logo">&#060;&nbsp;Coder Net&nbsp;&#062;</h2>
 			</div>
 		</md-toolbar>
 		<md-content style="background-color: #dddfd4">
