--- a/views/index.html
+++ b/views/index.html
@@ -80,7 +80,7 @@
 
 			<p class="footer-links">
 				<a ui-sref="Home">Home</a> |
-				<a ui-sref="Forum">Forum</a> |
+				<a ui-sref="Forums">Forum</a> |
 				<a ui-sref="About">About</a> |
 				<a ui-sref="Contact">Contact</a> |
 				<a ui-sref="Terms">Terms of Service</a>
